fix layout issue

--- a/matraum-app/src/app/pages/external-rentals/external-rentals.component.sass
+++ b/matraum-app/src/app/pages/external-rentals/external-rentals.component.sass
@@ -1,26 +1,17 @@
 
-
-span
-    text-align: center
-    padding: 20px
-    color: #000000
-    border-radius: 5px
-    font-weight: 700
-    margin: 5px
-    
-
-    
 #back-action
-    background-color: #d90404cc
-    border: 2px solid #ca0505cc
-    padding: 10px 20px
-    grid-area: zurück
-    color: white
+  background-color: #d90404cc
+  border: 2px solid #ca0505cc
+  padding: 10px 20px
+  color: white
+  text-align: center
+  border-radius: 5px
+  font-weight: 700
 
-div 
-    display: grid
-    plays-item: center
-    width: 100%
-    height: 100%
+div
+  display: grid
+  place-items: center
+  width: 100%
+  height: 100%
 
-         
+
